cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER g++)
add_compile_options(-std=c++11)
project(main)
include_directories("/usr/local/log4cxx/include" "/usr/local/apr/include")
link_directories("/usr/local/log4cxx/lib" "/usr/local/apr/lib")
#find_library(APR_LIB NAMES apr /usr/local/apr/lib/ NO_DEFAULT_PATH)
#find_library(APRUTIL_LIB NAMES aprutil /usr/local/apr/lib/ NO_DEFAULT_PATH)
#find_library(LOG_LIB NAMES log4cxx /usr/local/log4cxx/lib/ NO_DEFAULT_PATH)
#link_libraries(${APR_LIB} ${APRUTIL_LIB} ${LOG_LIB})
add_executable(main main.cpp)
target_link_libraries(main libapr-1.so libaprutil-1.so liblog4cxx.so)
